--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.3.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^19.2.4",
+    "react-cookie": "^8.0.1",
     "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
